<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:title="@string/app_filter"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_filter">

        <menu>
            <item
                android:id="@+id/menu_category"
                android:title="@string/text_categories"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_store"
                android:title="@string/text_store"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_minimum"
                android:title="@string/text_minimum"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_maximum"
                android:title="@string/text_maximum"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>