<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".fragment.FeedbackFragment">

    <LinearLayout
        android:id="@+id/linearLayoutQuestions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/nav_feedback"
            android:textAlignment="center"
            android:textSize="@dimen/text_title_product"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewNo"
                android:layout_width="@dimen/circle_image_view"
                android:layout_height="@dimen/circle_image_view"
                android:contentDescription="@string/app_no"
                android:src="@drawable/ic_menu_dissatisfied" />

            <ImageView
                android:id="@+id/imageViewNeutral"
                android:layout_width="@dimen/circle_image_view"
                android:layout_height="@dimen/circle_image_view"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:contentDescription="@string/app_neutral"
                android:src="@drawable/ic_menu_indifferent" />

            <ImageView
                android:id="@+id/imageViewYes"
                android:layout_width="@dimen/circle_image_view"
                android:layout_height="@dimen/circle_image_view"
                android:contentDescription="@string/app_yes"
                android:src="@drawable/ic_menu_pleased" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_no"
                android:textSize="@dimen/text_body_product" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fav_icon"
                android:layout_marginRight="@dimen/fav_icon"
                android:text="@string/app_neutral"
                android:textSize="@dimen/text_body_product" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_yes"
                android:textSize="@dimen/text_body_product" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textInputEditTextFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/text_review"
        android:inputType="textMultiLine|textLongMessage"
        android:scrollbars="vertical"
        android:textSize="@dimen/text_body_product"
        android:visibility="invisible" />

</android.support.constraint.ConstraintLayout>