<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_item"
    android:clickable="true"
    app:cardElevation="3dp"
    tools:cardElevation="6dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_item"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewUser"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_width"
                android:layout_gravity="center"
                android:contentDescription="@string/text_name"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textViewAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:text="@string/text_about"
                android:textAlignment="center"
                android:textSize="@dimen/text_body_product"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_dont_show_again"
                android:visibility="invisible"/>

        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>