<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:clickable="true"
    app:cardElevation="3dp"
    tools:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/nav_header_padding"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="@dimen/circle_image_view"
            android:layout_height="@dimen/circle_image_view">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_round" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_item"
            android:layout_marginStart="@dimen/padding_item"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_value"
                android:textSize="@dimen/text_body" />

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_quantity"
                android:textSize="@dimen/text_body"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>