<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_item"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="3dp"
    tools:cardElevation="6dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_item"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_width"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/text_name"
                    android:src="@mipmap/ic_launcher_round" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

            <TextView
                android:id="@+id/textViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_value"
                android:textSize="@dimen/text_title_product"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_total"
                android:textSize="@dimen/text_title_product"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_margin">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_decrease"
                    android:layout_width="@dimen/fav_icon"
                    android:layout_height="@dimen/fav_icon"
                    android:src="@drawable/ic_menu_remove"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/text_quantity"
                    android:inputType="numberSigned"
                    android:text="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_title_product"
                    app:layout_constraintBottom_toBottomOf="@+id/fab_decrease"
                    app:layout_constraintEnd_toStartOf="@+id/fab_increase"
                    app:layout_constraintStart_toEndOf="@+id/fab_decrease"
                    app:layout_constraintTop_toTopOf="@+id/fab_decrease" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_increase"
                    android:layout_width="@dimen/fav_icon"
                    android:layout_height="@dimen/fav_icon"
                    android:src="@drawable/ic_menu_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.v7.widget.CardView>